[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sud0recon"
version = "1.0.0"
description = "Next-level automated reconnaissance & vulnerability scanning tool by Sud0-x"
authors = [
    {name = "Sud0-x", email = "sud0x.dev@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.2",
    "colorama>=0.4.4",
    "dnspython>=2.2.0",
    "fastapi>=0.95.0",
    "jinja2>=3.1.0",
    "pydantic>=1.10.0",
    "python-nmap>=0.7.1",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "sqlalchemy>=1.4.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Sud0-x/Sud0Recon"
Repository = "https://github.com/Sud0-x/Sud0Recon"
Issues = "https://github.com/Sud0-x/Sud0Recon/issues"

[project.scripts]
sud0recon = "sud0recon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
